--- a/send_smart/templates/base.html
+++ b/send_smart/templates/base.html
@@ -9,9 +9,11 @@
            border-collapse: collapse;
         }
         th{
+            font-size: 0.8rem;
             background-color: #79ace6;
         }
         th, td{
+            padding: 0 5px;
             border: solid 1px black;
         }
         td.number{
@@ -24,7 +26,7 @@
 </head>
 <body>
     <h3>{{ usage }}</h3>
-    {%- for disk, s in smart %}
+    {%- for disk, row in smart %}
     <h4>{{ disk }}</h4>
     <table>
         <tr>
@@ -35,18 +37,18 @@
             <th>Raw値</th>
             <th>ステータス</th>
         </tr>
-        {%- for t in s %}
+        {%- for col in row %}
         <tr>
-            <td class="number">{{ t.id }}</td>
-            <td class="description">{{ t.description }}</td>
-            <td class="number">{{ t.value }}</td>
-            <td class="number">{{ t.worst_value }}</td>
-            <td class="number">{{ t.threshold }}</td>
-            <td class="number">{{ t.raw_value }}</td>
-            {%- if t.status != '0' %}
-            <td class="number caution">{{ t.status }}</td>
+            <td class="number">{{ col.id }}</td>
+            <td class="description">{{ col.description }}</td>
+            <td class="number">{{ col.value }}</td>
+            <td class="number">{{ col.worst_value }}</td>
+            <td class="number">{{ col.threshold }}</td>
+            <td class="number">{{ col.raw_value }}</td>
+            {%- if col.status != '0' %}
+            <td class="number caution">{{ col.status }}</td>
             {%- else %}
-            <td class="number">{{ t.status }}</td>
+            <td class="number">{{ col.status }}</td>
             {%- endif %}
         </tr>
         {%- endfor %}
